src/styles/main.css
@font-face {
  font-family: 'Oswald';
  src: url('../assets/fonts/Oswald-Regular.woff2') format('woff2');
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: 'Oswald';
  src: url('../assets/fonts/Oswald-Light.woff2') format('woff2');
  font-weight: 200 300;
  font-display: swap;
}

@font-face {
  font-family: 'Oswald';
  src: url('../assets/fonts/Oswald-Bold.woff2') format('woff2');
  font-weight: 500 700;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../assets/fonts/OpenSans-Regular.woff2') format('woff2');
  /* url('../assets/fonts/OpenSans-Regular.woff') format('woff'); */
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../assets/fonts/OpenSans-SemiBold.woff2') format('woff2');
  /* url('../assets/fonts/OpenSans-SemiBold.woff') format('woff'); */
  font-weight: 600;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../assets/fonts/OpenSans-Bold.woff2') format('woff2');
  /* url('../assets/fonts/OpenSans-Bold.woff') format('woff'); */
  font-weight: 700;
  font-display: swap;
}

:root {
  --font-base: 'Open Sans', sans-serif;
  --font-headings: 'Oswald', sans-serif;
  /* Базовые цвета */
  --color-white: #fff;
  --color-black: #000;

  /* Серые оттенки */
  --color-gray-100: #fafafa;
  --color-gray-200: #eef4ff;
  --color-gray-500: #777;
  --color-gray-600: #f7f7f7c7;
  --color-gray-800: #26292d;
  --color-gray-900: #171718;

  /* Синяя палитра */
  --color-blue-300: #3073c5;
  --color-blue-700: #0058a7;
  --color-blue-800: #004889;
  --color-blue-900: #00386b;

  /* Красная палитра */
  --color-red-100: #fdf2fa;
  --color-red-500: #c11574;

  /* Зелёная палитра */
  --color-green-500: #22c55e;
  /* Радиусы */
  --border-radius-s: 8px;

  --box-shadow: 0px 0px 8px 0px #00000026;
  --gradient: linear-gradient(
    to right,
    var(--color-blue-700),
    var(--color-blue-300)
  );
}

/* Глобальное изменение скроллбара для всей страницы */
html {
  /* Для Firefox */
  scrollbar-width: thin;
  scrollbar-color: var(--color-blue-700) #f1f1f1;
}

body,
ul,
ol,
h1,
h2,
h3,
h4,
h5,
h6,
p,
li,
a,
button {
  margin: 0;
  padding: 0;
}

body {
  min-width: 320px;
  font-family: var(--font-base);
  font-size: 16px;
  font-weight: 400;
  line-height: 22px;
  background-color: var(--color-white);
}

body::-webkit-scrollbar {
  width: 12px;
}

body::-webkit-scrollbar-track {
  background: #f1f1f1;
}

body::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 6px;
  border: 3px solid #f1f1f1;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

img {
  width: 100%;
  vertical-align: middle;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.container {
  width: 100%;
  max-width: 1440px;
  margin-inline: auto;
  padding-inline: clamp(16px, 4vw, 32px);
  box-sizing: border-box;
}

.wrapper {
  margin-top: 120px;
  margin-bottom: 40px;
}

@media screen and (max-width: 1268px) {
  .container {
    max-width: 1068px;
  }
}

@media screen and (max-width: 768px) {
  .wrapper {
    margin-top: 16px;
  }

  ::-webkit-scrollbar {
    display: none;
  }
}

